packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_on__event_modifier.snap
---
source: tests/vapor/v_on.rs
expression: code
---
_delegateEvents("click", "contextmenu", "keyup", "mouseup");
import { delegateEvents as _delegateEvents, on as _on, template as _template, withKeys as _withKeys, withModifiers as _withModifiers } from "vue";
const t0 = _template("<a></a>");
const t1 = _template("<form></form>");
const t2 = _template("<div></div>");
const t3 = _template("<input>");
(() => {
  const n1 = t0();
  const n3 = t1();
  const n5 = t0();
  const n7 = t2();
  const n9 = t2();
  const n11 = t0();
  const n13 = t2();
  const n15 = t3();
  const n17 = t3();
  const n19 = t3();
  const n21 = t3();
  const n23 = t3();
  const n25 = t3();
  const n27 = t3();
  const n29 = t3();
  const n31 = t3();
  const n33 = t3();
  const n35 = t3();
  const n37 = t3();
  const n39 = t3();
  const n41 = t3();
  const n43 = t3();
  n1.$evtclick = _withModifiers(handleEvent, ["stop"]);
  _on(n3, "submit", _withModifiers(handleEvent, ["prevent"]));
  n5.$evtclick = _withModifiers(handleEvent, ["stop", "prevent"]);
  n7.$evtclick = _withModifiers(handleEvent, ["self"]);
  _on(n9, "click", handleEvent, { capture: true });
  _on(n11, "click", handleEvent, { once: true });
  _on(n13, "scroll", handleEvent, { passive: true });
  n15.$evtcontextmenu = _withModifiers(handleEvent, ["right"]);
  n17.$evtclick = _withModifiers(handleEvent, ["left"]);
  n19.$evtmouseup = _withModifiers(handleEvent, ["middle"]);
  n21.$evtcontextmenu = _withKeys(_withModifiers(handleEvent, ["right"]), ["enter"]);
  n23.$evtkeyup = _withKeys(handleEvent, ["enter"]);
  n25.$evtkeyup = _withKeys(handleEvent, ["tab"]);
  n27.$evtkeyup = _withKeys(handleEvent, ["delete"]);
  n29.$evtkeyup = _withKeys(handleEvent, ["esc"]);
  n31.$evtkeyup = _withKeys(handleEvent, ["space"]);
  n33.$evtkeyup = _withKeys(handleEvent, ["up"]);
  n35.$evtkeyup = _withKeys(handleEvent, ["down"]);
  n37.$evtkeyup = _withKeys(handleEvent, ["left"]);
  n39.$evtkeyup = _withModifiers(submit, ["middle"]);
  n41.$evtkeyup = _withModifiers(submit, ["middle", "self"]);
  n43.$evtkeyup = _withKeys(_withModifiers(handleEvent, ["self"]), ["enter"]);
  return [
    n1,
    n3,
    n5,
    n7,
    n9,
    n11,
    n13,
    n15,
    n17,
    n19,
    n21,
    n23,
    n25,
    n27,
    n29,
    n31,
    n33,
    n35,
    n37,
    n39,
    n41,
    n43
  ];
})();
