packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_on__namespace_event_with_component.snap
---
source: tests/vapor/v_on.rs
expression: code
---
import { createComponent as _createComponent } from "/vue-jsx-vapor/vapor";
(() => {
  const n0 = _createComponent(Comp, { "onUpdate:modelValue": () => () => {} }, null, true);
  return n0;
})();
