packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_on__should_not_wrap_keys_guard_if_no_key_modifier_is_present.snap
---
source: tests/vapor/v_on.rs
expression: code
---
_delegateEvents("keyup");
import { delegateEvents as _delegateEvents, template as _template, withModifiers as _withModifiers } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  n0.$evtkeyup = _withModifiers(test, ["exact"]);
  return n0;
})();
