packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_on__should_support_multiple_modifiers_and_event_options.snap
---
source: tests/vapor/v_on.rs
expression: code
---
import { on as _on, template as _template, withModifiers as _withModifiers } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  _on(n0, "click", _withModifiers(test, ["stop", "prevent"]), {
    capture: true,
    once: true
  });
  return n0;
})();
