packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_on__should_use_delegate_helper_when_have_multiple_events_of_same_name.snap
---
source: tests/vapor/v_on.rs
expression: code
---
_delegateEvents("click");
import { delegate as _delegate, delegateEvents as _delegateEvents, template as _template, withModifiers as _withModifiers } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  _delegate(n0, "click", test);
  _delegate(n0, "click", _withModifiers(test, ["stop"]));
  return n0;
})();
